--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -6026,6 +6026,26 @@ a.text-dark:hover, a.text-dark:focus {
   .table-bordered td {
     border: 1px solid #ddd !important; } }
 
+#index .card {
+  text-align: center;
+  border: 0; }
+
+#index .card-header {
+  border: 0;
+  background: none; }
+
+#index .card-body {
+  height: 250px; }
+
+#index img {
+  height: 80%;
+  width: 80%;
+  display: block;
+  margin: auto; }
+
+#index {
+  text-align: center; }
+
 
 
 /*# sourceMappingURL=app.css.map*/
