--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,5 +1,27 @@
 @import "bootstrap";
 
+@font-face {
+  font-family: 'Shorelines Script Bold';
+  src: url('/fonts/Shorelines Script Bold.otf');
+}
+
+@font-face {
+  font-family: 'PixelOperator';
+  src: url('/fonts/PixelOperator.ttf');
+}
+
+body {
+  font-family: 'PixelOperator';
+  font-size: 20px;
+}
+
+h1 {
+  font-family: 'Shorelines Script Bold';
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
 #index .card {
   text-align: center;
   border: 0;
@@ -19,8 +41,4 @@
   width: 80%;
   display: block;
   margin: auto;
-}
-
-#index {
-  text-align: center;
 }
