--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -6026,6 +6026,24 @@ a.text-dark:hover, a.text-dark:focus {
   .table-bordered td {
     border: 1px solid #ddd !important; } }
 
+@font-face {
+  font-family: 'Shorelines Script Bold';
+  src: url("/fonts/Shorelines Script Bold.otf"); }
+
+@font-face {
+  font-family: 'PixelOperator';
+  src: url("/fonts/PixelOperator.ttf"); }
+
+body {
+  font-family: 'PixelOperator';
+  font-size: 20px; }
+
+h1 {
+  font-family: 'Shorelines Script Bold';
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 30px; }
+
 #index .card {
   text-align: center;
   border: 0; }
@@ -6042,9 +6060,6 @@ a.text-dark:hover, a.text-dark:focus {
   width: 80%;
   display: block;
   margin: auto; }
-
-#index {
-  text-align: center; }
 
 
 
