--- a/priv/static/css/app.css
+++ b/priv/static/css/app.css
@@ -6056,7 +6056,9 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 75%;
+  width: 75%; }
+
+.centered .card-body {
   text-align: center; }
 
 .centered img {
@@ -6068,6 +6070,9 @@ h1 {
 
 .btn {
   font-size: 21px; }
+
+.centered #login-form {
+  text-align: left; }
 
 #index .card {
   text-align: center;
